--- a/public/cms.html
+++ b/public/cms.html
@@ -6,20 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
     />
     <link href="assets/css/style.css" rel="stylesheet" />
   </head>
 
   <body>
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="/logout">
-            Logout
-          </a>
-        </div>
-      </div>
+    <nav class="navbar navbar-light bg-light justify-content-between">
+      <a class="navbar-brand" href="/">Cryptofolio</a>
+      <form class="form-inline">
+        <a class="btn btn-outline-success mx-2 my-2 my-sm-0" href="/cms">
+          CMS
+        </a>
+        <a class="btn btn-outline-success mx-2 my-2 my-sm-0" href="/signup">
+          Signup
+        </a>
+        <a class="btn btn-outline-success mx-2 my-2 my-sm-0" href="/login">
+          Login
+        </a>
+        <a class="btn btn-outline-success mx-2 my-2 my-sm-0" href="/logout">
+          Logout
+        </a>
+      </form>
     </nav>
     <div class="container">
       <div class="row">
