--- a/public/cms.html
+++ b/public/cms.html
@@ -31,9 +31,18 @@
         </a>
       </form>
     </nav>
+    <br />
     <div class="container">
       <div class="row">
-        <div class="col-md-6 col-md-offset-3">
+        <div class="col">
+          <div
+            style="display: none;"
+            id="alert"
+            class="alert alert-danger"
+            role="alert"
+          >
+            <span class="sr-only">Error:</span> <span class="msg"></span>
+          </div>
           <div id="cms"></div>
         </div>
       </div>
